fixed the x-axis scrollbar bug on the navigation view, MVP complete

--- a/css/index.css
+++ b/css/index.css
@@ -184,7 +184,7 @@ p {
 }
 @media (max-width: 600px) {
   .nav-container {
-    max-width: 100%;
+    width: 100%;
   }
 }
 .nav-container .nav-text {
@@ -283,6 +283,7 @@ p {
   color: white;
   line-height: 7.5rem;
   font-weight: bold;
+  width: 90%;
 }
 @media (max-width: 600px) {
   .header h1 {
