--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,12 +7,13 @@
   z-index: 3;
 
   @media @phone {
-    max-width: 100%;
+    width: 100%;
   }
   
 
   .nav-text {
     margin-left: 8%;
+
 
     h3 {
       color: white;
@@ -126,6 +127,8 @@
     color: white;
     line-height: 7.5rem;
     font-weight: bold;
+    width: 90%;
+    
 
     @media @phone {
     top: 144px;
